sts-lab.yaml
apiVersion: v1
kind: Service
metadata:
  name: penulis-h          # headless service
  namespace: lab2
spec:
  clusterIP: None
  selector: { app: penulis }
  ports:
    - port: 80
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: penulis
  namespace: lab2
spec:
  serviceName: penulis-h
  replicas: 3
  podManagementPolicy: Parallel
  selector:
    matchLabels: { app: penulis }
  template:
    metadata:
      labels: { app: penulis }
    spec:
      containers:
        - name: penulis
          image: busybox:1.36
          command: ["/bin/sh","-c"]
          args:
            - |
              echo "pod $(hostname) mulai $(date)" >> /data/jejak.log
              while true; do
                echo "$(hostname) $(date +%s)" >> /data/jejak.log
                sleep 5
              done
          volumeMounts:
            - name: data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
